Removed provider from user
